--- a/Zipssa/app/src/main/res/drawable/add_alarm_date_selector.xml
+++ b/Zipssa/app/src/main/res/drawable/add_alarm_date_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:state_checked="true" >
+	<item android:state_checked="true" android:state_pressed="false">
 		<shape>
 			<corners android:radius="5dp" />
 			<solid android:color="@color/main_theme" />
@@ -8,10 +8,26 @@
 		</shape>
 	</item>
 
-	<item android:state_checked="false" >
+	<item android:state_checked="true" android:state_pressed="true">
+		<shape>
+			<corners android:radius="5dp" />
+			<solid android:color="@color/main_theme_thick" />
+			<stroke android:color="@color/text_color" android:width="1dp"/>
+		</shape>
+	</item>
+
+	<item android:state_checked="false" android:state_pressed="false">
 		<shape>
 			<corners android:radius="5dp" />
 			<solid android:color="#FFFFFF" />
+			<stroke android:color="@color/text_color" android:width="1dp"/>
+		</shape>
+	</item>
+
+	<item android:state_checked="false" android:state_pressed="true">
+		<shape>
+			<corners android:radius="5dp" />
+			<solid android:color="#E6E6E6" />
 			<stroke android:color="@color/text_color" android:width="1dp"/>
 		</shape>
 	</item>
