--- a/Zipssa/app/src/main/res/layout/add_alarm_activity.xml
+++ b/Zipssa/app/src/main/res/layout/add_alarm_activity.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/background_theme"
-	android:focusableInTouchMode="true">
+	android:focusableInTouchMode="true"
+	android:orientation="vertical">
 
 	<androidx.appcompat.widget.Toolbar
 		android:id="@+id/add_toolbar"
 		android:layout_width="match_parent"
 		android:layout_height="?attr/actionBarSize"
-		android:background="@color/main_theme"
-		android:orientation="horizontal"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintBottom_toTopOf="@id/scrollView">
+		android:background="@color/main_theme" >
 
 		<TextView
 			android:layout_width="match_parent"
@@ -30,12 +26,9 @@
 
 	<ScrollView
 		android:id="@+id/scrollView"
-		android:layout_width="0dp"
+		android:layout_width="match_parent"
 		android:layout_height="0dp"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/add_toolbar"
-		app:layout_constraintBottom_toBottomOf="parent">
+		android:layout_weight="1">
 
 		<LinearLayout
 			android:layout_width="match_parent"
@@ -66,7 +59,7 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:orientation="vertical"
-					android:background="@drawable/add_alarm_box"
+					android:background="@drawable/white_background_box"
 					android:paddingHorizontal="@dimen/add_alarm_text_hinside">
 
 					<EditText
@@ -92,7 +85,7 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:orientation="vertical"
-					android:background="@drawable/add_alarm_box">
+					android:background="@drawable/white_background_box">
 
 					<LinearLayout
 						android:layout_width="match_parent"
@@ -115,7 +108,7 @@
 							android:layout_weight="1"
 							android:layout_gravity="end"
 							android:textAlignment="textEnd"
-							android:background="#FFFFFF"
+							android:background="@color/box_theme"
 							android:spinnerMode="dropdown"
 							android:textColor="@color/main_theme"/>
 					</LinearLayout>
@@ -147,7 +140,7 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:orientation="vertical"
-					android:background="@drawable/add_alarm_box">
+					android:background="@drawable/white_background_box">
 
 					<LinearLayout
 						android:layout_width="match_parent"
@@ -339,8 +332,33 @@
 							android:textOn="토" />
 					</LinearLayout>
 				</LinearLayout>
+
+				<TextView
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="라벨 설정"
+					android:textColor="@color/main_theme"
+					android:layout_marginTop="@dimen/add_alarm_voutside"
+					android:layout_marginHorizontal="@dimen/add_alarm_text_hinside"
+					android:textSize="@dimen/add_alarm_text_large" />
+
+				<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:orientation="vertical"
+					android:background="@drawable/white_background_box"
+					android:paddingHorizontal="@dimen/add_alarm_text_hinside">
+
+					<LinearLayout
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content" >
+
+
+					</LinearLayout>
+				</LinearLayout>
 				
 				<Button
+					android:id="@+id/submit_button"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:background="@drawable/add_alarm_submit"
@@ -359,6 +377,4 @@
 				android:layout_weight="1"/>
 		</LinearLayout>
 	</ScrollView>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
