--- a/Zipssa/app/src/main/res/layout/alarm_time_item.xml
+++ b/Zipssa/app/src/main/res/layout/alarm_time_item.xml
@@ -5,6 +5,7 @@
 	android:orientation="horizontal">
 
 	<TextView
+		android:id="@+id/count_time"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:textSize="@dimen/add_alarm_text_large"
