--- a/Zipssa/app/src/main/res/layout/add_alarm_activity.xml
+++ b/Zipssa/app/src/main/res/layout/add_alarm_activity.xml
@@ -41,9 +41,11 @@
 				android:layout_weight="1"/>
 
 			<LinearLayout
-				android:layout_width="0dp"
+				android:layout_width="20dp"
 				android:layout_height="wrap_content"
 				android:layout_weight="8"
+				android:paddingHorizontal="10dp"
+				android:clipToPadding="false"
 				android:orientation="vertical">
 
 				<TextView
@@ -59,6 +61,7 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:orientation="vertical"
+					android:elevation="@dimen/shadow_size"
 					android:background="@drawable/white_background_box"
 					android:paddingHorizontal="@dimen/add_alarm_text_hinside">
 
@@ -72,19 +75,21 @@
 				</LinearLayout>
 
 				<Switch
+					android:id="@+id/add_times_switch"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:text="시간 설정"
-					android:textColor="@color/main_theme"
-					android:layout_marginTop="@dimen/add_alarm_voutside"
 					android:layout_marginHorizontal="@dimen/add_alarm_text_hinside"
-					android:textSize="@dimen/add_alarm_text_large"
-					android:checked="true"/>
+					android:layout_marginTop="@dimen/add_alarm_voutside"
+					android:checked="true"
+					android:text="알람 설정"
+					android:textColor="@color/main_theme"
+					android:textSize="@dimen/add_alarm_text_large" />
 
 				<LinearLayout
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:orientation="vertical"
+					android:elevation="@dimen/shadow_size"
 					android:background="@drawable/white_background_box">
 
 					<LinearLayout
@@ -102,7 +107,7 @@
 							android:text="알림 횟수"/>
 
 						<Spinner
-							android:id="@+id/alarm_counts"
+							android:id="@+id/alarm_times"
 							android:layout_width="0dp"
 							android:layout_height="match_parent"
 							android:layout_weight="1"
@@ -120,7 +125,7 @@
 						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside"/>
 
 					<LinearLayout
-						android:id="@+id/count_container"
+						android:id="@+id/add_time_container"
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
 						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside"
@@ -140,6 +145,7 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:orientation="vertical"
+					android:elevation="@dimen/shadow_size"
 					android:background="@drawable/white_background_box">
 
 					<LinearLayout
@@ -212,20 +218,22 @@
 						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside"/>
 
 					<RadioGroup
+						android:id="@+id/add_repeat_group"
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
 						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_large" >
 
 						<RadioButton
-							android:id="@+id/add_date_everyday"
+							android:id="@+id/add_repeat_everyday"
 							android:layout_width="match_parent"
 							android:layout_height="wrap_content"
 							android:text="매일"
 							android:textColor="@color/text_color"
+							android:checked="true"
 							android:textSize="@dimen/add_alarm_text_small"/>
 
 						<RadioButton
-							android:id="@+id/add_date_select"
+							android:id="@+id/add_repeat_select"
 							android:layout_width="match_parent"
 							android:layout_height="wrap_content"
 							android:text="요일 지정"
@@ -255,6 +263,7 @@
 							android:background="@drawable/add_alarm_date_selector"
 							android:textColor="@drawable/add_alarm_date_color"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
+							android:checked="true"
 							android:textOff="일"
 							android:textOn="일"
 							android:textSize="@dimen/add_alarm_text_small" />
@@ -268,6 +277,7 @@
 							android:textColor="@drawable/add_alarm_date_color"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
+							android:checked="true"
 							android:textOff="월"
 							android:textOn="월" />
 
@@ -280,6 +290,7 @@
 							android:textColor="@drawable/add_alarm_date_color"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
+							android:checked="true"
 							android:textOff="화"
 							android:textOn="화" />
 
@@ -292,6 +303,7 @@
 							android:textColor="@drawable/add_alarm_date_color"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
+							android:checked="true"
 							android:textOff="수"
 							android:textOn="수" />
 
@@ -304,6 +316,7 @@
 							android:textColor="@drawable/add_alarm_date_color"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
+							android:checked="true"
 							android:textOff="목"
 							android:textOn="목" />
 
@@ -316,6 +329,7 @@
 							android:textColor="@drawable/add_alarm_date_color"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
+							android:checked="true"
 							android:textOff="금"
 							android:textOn="금" />
 
@@ -328,6 +342,7 @@
 							android:textColor="@drawable/add_alarm_date_color"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
+							android:checked="true"
 							android:textOff="토"
 							android:textOn="토" />
 					</LinearLayout>
@@ -356,7 +371,7 @@
 
 					</LinearLayout>
 				</LinearLayout>
-				
+
 				<Button
 					android:id="@+id/submit_button"
 					android:layout_width="wrap_content"
