--- a/Zipssa/app/src/main/res/drawable/add_alarm_date_selector.xml
+++ b/Zipssa/app/src/main/res/drawable/add_alarm_date_selector.xml
@@ -27,7 +27,7 @@
 	<item android:state_checked="false" android:state_pressed="true">
 		<shape>
 			<corners android:radius="5dp" />
-			<solid android:color="#E6E6E6" />
+			<solid android:color="@color/white_pressed" />
 			<stroke android:color="@color/text_color" android:width="1dp"/>
 		</shape>
 	</item>
