--- a/Zipssa/app/src/main/res/layout/main_activity.xml
+++ b/Zipssa/app/src/main/res/layout/main_activity.xml
@@ -1,13 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:background="@color/background_theme">
+	android:background="@color/background_theme"
+	android:orientation="vertical">
 
-	<androidx.viewpager.widget.ViewPager
-		android:id="@+id/main_pager"
+	<LinearLayout
+		android:id="@+id/main_container"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+		android:layout_height="0dp"
+		android:layout_weight="1"
+		android:orientation="horizontal" />
+
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="?attr/actionBarSize"
+		android:orientation="horizontal"
+		android:background="@color/main_theme" >
+
+		<LinearLayout
+			android:id="@+id/bar_home"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:orientation="vertical"
+			android:gravity="center"
+			android:layout_marginTop="@dimen/main_distance_mid"
+			android:layout_marginBottom="@dimen/main_distance_small">
+
+			<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="0dp"
+				android:layout_weight="1"
+				android:src="@drawable/bar_home"
+				android:adjustViewBounds="true"/>
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="홈"
+				android:textColor="@color/bottom_bar_text"
+				android:textSize="@dimen/bottom_bar_text"/>
+		</LinearLayout>
+
+		<View
+			android:layout_width="@dimen/split_line"
+			android:layout_height="match_parent"
+			android:background="#FFFFFF"
+			android:layout_marginVertical="5dp"/>
+
+		<LinearLayout
+			android:id="@+id/bar_add"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:orientation="vertical"
+			android:gravity="center"
+			android:layout_marginTop="@dimen/main_distance_mid"
+			android:layout_marginBottom="@dimen/main_distance_small">
+
+			<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="0dp"
+				android:layout_weight="1"
+				android:src="@drawable/bar_add"
+				android:adjustViewBounds="true"/>
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="촬영"
+				android:textColor="@color/bottom_bar_text"
+				android:textSize="@dimen/bottom_bar_text"/>
+		</LinearLayout>
+
+		<View
+			android:layout_width="@dimen/split_line"
+			android:layout_height="match_parent"
+			android:background="#FFFFFF"
+			android:layout_marginVertical="5dp"/>
+
+		<LinearLayout
+			android:id="@+id/bar_search"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:orientation="vertical"
+			android:gravity="center"
+			android:layout_marginTop="@dimen/main_distance_mid"
+			android:layout_marginBottom="@dimen/main_distance_small">
+
+			<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="0dp"
+				android:layout_weight="1"
+				android:src="@drawable/bar_search"
+				android:adjustViewBounds="true"/>
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="검색"
+				android:textColor="@color/bottom_bar_text"
+				android:textSize="@dimen/bottom_bar_text"/>
+		</LinearLayout>
+
+		<View
+			android:layout_width="@dimen/split_line"
+			android:layout_height="match_parent"
+			android:background="#FFFFFF"
+			android:layout_marginVertical="5dp"/>
+
+		<LinearLayout
+			android:id="@+id/bar_setting"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:orientation="vertical"
+			android:gravity="center"
+			android:layout_marginTop="@dimen/main_distance_mid"
+			android:layout_marginBottom="@dimen/main_distance_small">
+
+			<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="0dp"
+				android:layout_weight="1"
+				android:src="@drawable/bar_setting"
+				android:adjustViewBounds="true"/>
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="설정"
+				android:textColor="@color/bottom_bar_text"
+				android:textSize="@dimen/bottom_bar_text"/>
+		</LinearLayout>
+	</LinearLayout>
+</LinearLayout>
