--- a/Zipssa/app/src/main/res/layout/main_item.xml
+++ b/Zipssa/app/src/main/res/layout/main_item.xml
@@ -8,13 +8,13 @@
 	<TextView
 		android:id="@+id/main_item_remain_time"
 		android:background="@drawable/main_item_remain_time"
-		android:layout_width="150dp"
+		android:layout_width="110dp"
 		android:layout_height="wrap_content"
 		android:gravity="center"
 		android:textSize="@dimen/main_text_mid"
 		android:textColor="@color/main_list_text"
 		android:text="0h 00m"
-		android:paddingVertical="@dimen/add_alarm_text_vinside"/>
+		android:paddingVertical="@dimen/main_distance_small"/>
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -44,7 +44,7 @@
 					android:layout_height="wrap_content"
 					android:src="@drawable/alarm_img"
 					android:adjustViewBounds="true"
-					android:paddingHorizontal="35dp"
+					android:paddingHorizontal="25dp"
 					android:paddingTop="20dp"
 					android:paddingBottom="10dp"/>
 
@@ -84,19 +84,19 @@
 
 					<ToggleButton
 						android:id="@+id/main_item_switch"
-						android:layout_width="60dp"
-						android:layout_height="30dp"
+						android:layout_width="50dp"
+						android:layout_height="25dp"
 						android:background="@drawable/alarm_btn_selector"
 						android:layout_marginRight="30dp"
 						android:textOn="알림 on"
 						android:textOff="알림 off"
-						android:textSize="@dimen/main_text_small"/>
+						android:textSize="@dimen/alarm_switch"/>
 				</LinearLayout>
 
 				<LinearLayout
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:layout_marginTop="@dimen/main_distance_large"
+					android:layout_marginTop="@dimen/main_distance_mid"
 					android:orientation="horizontal" >
 
 					<View
@@ -128,7 +128,7 @@
 						android:id="@+id/main_item_check_container"
 						android:layout_width="wrap_content"
 						android:layout_height="match_parent"
-						android:orientation="horizontal"/>
+						android:orientation="horizontal" />
 				</LinearLayout>
 
 				<LinearLayout
@@ -175,7 +175,8 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:orientation="horizontal"
-					android:layout_marginTop="@dimen/main_distance_small">
+					android:layout_marginTop="@dimen/main_distance_small"
+					android:layout_marginBottom="@dimen/main_distance_mid">
 
 					<View
 						android:layout_width="5dp"
