--- a/Zipssa/app/src/main/res/layout/main_list_fragment.xml
+++ b/Zipssa/app/src/main/res/layout/main_list_fragment.xml
@@ -96,6 +96,8 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:orientation="vertical">
+
+				<include layout="@layout/main_item" />
 			</LinearLayout>
 		</LinearLayout>
 	</ScrollView>
