--- a/Zipssa/app/src/main/res/values/dimens.xml
+++ b/Zipssa/app/src/main/res/values/dimens.xml
@@ -13,7 +13,7 @@
 	<dimen name="main_distance_mid">10dp</dimen>
 	<dimen name="main_distance_small">5dp</dimen>
 	<dimen name="shadow_size">3dp</dimen>
-	<dimen name="split_line">2dp</dimen>
+	<dimen name="split_line">1dp</dimen>
 	<dimen name="bottom_bar">80dp</dimen>
 
 	<dimen name="add_alarm_text_large">15sp</dimen>
@@ -23,4 +23,6 @@
 	<dimen name="main_text_mid">15sp</dimen>
 	<dimen name="main_text_small">10sp</dimen>
 	<dimen name="bottom_bar_text">13sp</dimen>
+
+	<dimen name="alarm_switch">13dp</dimen>
 </resources>
