--- a/Zipssa/app/src/main/res/layout/main_item.xml
+++ b/Zipssa/app/src/main/res/layout/main_item.xml
@@ -3,7 +3,10 @@
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="vertical"
-	android:layout_marginTop="@dimen/main_distance_large">
+	android:paddingVertical="@dimen/main_distance_mid"
+	android:paddingHorizontal="@dimen/main_distance_xlarge"
+	android:clipToPadding="false"
+	android:elevation="@dimen/shadow_size">
 
 	<TextView
 		android:id="@+id/main_item_remain_time"
@@ -11,8 +14,9 @@
 		android:layout_width="110dp"
 		android:layout_height="wrap_content"
 		android:gravity="center"
+		android:elevation="@dimen/shadow_size"
 		android:textSize="@dimen/main_text_mid"
-		android:textColor="@color/main_list_text"
+		android:textColor="@color/main_list_remain_time"
 		android:text="0h 00m"
 		android:paddingVertical="@dimen/main_distance_small"/>
 
@@ -20,6 +24,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:background="@drawable/main_item"
+		android:elevation="@dimen/shadow_size"
 		android:orientation="vertical">
 
 		<View
@@ -37,29 +42,30 @@
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
-				android:orientation="vertical">
+				android:orientation="vertical"
+				android:layout_gravity="center"
+				android:paddingBottom="@dimen/main_distance_mid">
 
 				<ImageView
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:src="@drawable/alarm_img"
 					android:adjustViewBounds="true"
-					android:paddingHorizontal="25dp"
-					android:paddingTop="20dp"
+					android:layout_marginHorizontal="25dp"
 					android:paddingBottom="10dp"/>
 
-				<LinearLayout
+				<androidx.recyclerview.widget.RecyclerView
 					android:id="@+id/main_item_time_container"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:orientation="vertical"
-					android:layout_marginHorizontal="35dp" />
+					android:overScrollMode="never" />
 			</LinearLayout>
 
 			<LinearLayout
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:layout_weight="2"
+				android:layout_gravity="center"
 				android:orientation="vertical">
 
 				<LinearLayout
@@ -110,17 +116,8 @@
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:gravity="center"
-						android:layout_marginLeft="10dp"
-						android:text="1"
-						android:textSize="@dimen/main_text_mid"
-						android:textColor="@color/text_color"/>
-
-					<TextView
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:gravity="center"
-						android:layout_marginRight="10dp"
-						android:text="회 복용"
+						android:layout_marginHorizontal="10dp"
+						android:text="1회 복용"
 						android:textSize="@dimen/main_text_mid"
 						android:textColor="@color/text_color"/>
 
@@ -185,33 +182,16 @@
 						android:layout_gravity="center"/>
 
 					<TextView
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:gravity="center"
-						android:layout_marginLeft="10dp"
-						android:text="D-"
-						android:textSize="@dimen/main_text_mid"
-						android:textColor="@color/text_color"/>
-
-					<TextView
 						android:id="@+id/main_item_dday"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:gravity="center"
-						android:text="0"
+						android:layout_marginHorizontal="10dp"
+						android:text="D-0"
 						android:textSize="@dimen/main_text_mid"
 						android:textColor="@color/text_color"/>
 				</LinearLayout>
-
-				<LinearLayout
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:orientation="horizontal" >
-
-				</LinearLayout>
-
 			</LinearLayout>
 		</LinearLayout>
-
 	</LinearLayout>
 </LinearLayout>
