--- a/Zipssa/app/src/main/res/values/dimens.xml
+++ b/Zipssa/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
 	<dimen name="main_name_top">30dp</dimen>
 	<dimen name="main_name_side">10dp</dimen>
 	<dimen name="main_side">30dp</dimen>
+	<dimen name="main_distance_xlarge">30dp</dimen>
 	<dimen name="main_distance_large">20dp</dimen>
 	<dimen name="main_distance_mid">10dp</dimen>
 	<dimen name="main_distance_small">5dp</dimen>
@@ -24,5 +25,6 @@
 	<dimen name="main_text_small">10sp</dimen>
 	<dimen name="bottom_bar_text">13sp</dimen>
 
-	<dimen name="alarm_switch">13dp</dimen>
+	<dimen name="alarm_switch">10dp</dimen>
+	<dimen name="main_item_time">8dp</dimen>
 </resources>
