--- a/Zipssa/app/src/main/res/layout/add_alarm_activity.xml
+++ b/Zipssa/app/src/main/res/layout/add_alarm_activity.xml
@@ -11,7 +11,7 @@
 	<FrameLayout
 		android:layout_width="match_parent"
 		android:layout_height="?attr/actionBarSize"
-		android:background="@color/main_theme" >
+		android:background="@color/main_theme">
 
 		<ImageView
 			android:id="@+id/back_btn"
@@ -27,8 +27,9 @@
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
 			android:text="알림 추가"
+			android:fontFamily="@font/bmjua"
 			android:textSize="@dimen/add_alarm_text_large"
-			android:textColor="#FFFFFF"/>
+			android:textColor="#FFFFFF" />
 	</FrameLayout>
 
 	<ScrollView
@@ -45,7 +46,7 @@
 			<Space
 				android:layout_width="0dp"
 				android:layout_height="match_parent"
-				android:layout_weight="1"/>
+				android:layout_weight="1" />
 
 			<LinearLayout
 				android:layout_width="20dp"
@@ -59,10 +60,11 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:text="이름 설정"
+					android:fontFamily="@font/bmjua"
 					android:textColor="@color/main_theme"
 					android:layout_marginTop="@dimen/add_alarm_voutside"
-					android:layout_marginHorizontal="@dimen/add_alarm_text_hinside"
-					android:textSize="@dimen/add_alarm_text_large" />
+					android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_small"
+					android:textSize="@dimen/add_alarm_text_mid" />
 
 				<LinearLayout
 					android:layout_width="match_parent"
@@ -70,7 +72,7 @@
 					android:orientation="vertical"
 					android:elevation="@dimen/shadow_size"
 					android:background="@drawable/white_background_box"
-					android:paddingHorizontal="@dimen/add_alarm_text_hinside">
+					android:paddingHorizontal="@dimen/add_alarm_text_hinside_small">
 
 					<EditText
 						android:id="@+id/add_title"
@@ -78,19 +80,21 @@
 						android:layout_height="wrap_content"
 						android:layout_marginVertical="@dimen/add_alarm_text_vinside"
 						android:hint="\@@감기약 먹자@@"
-						android:textSize="@dimen/add_alarm_text_small"/>
+						android:fontFamily="@font/daylight_210"
+						android:textSize="@dimen/add_alarm_text_small" />
 				</LinearLayout>
 
 				<Switch
 					android:id="@+id/add_times_switch"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:layout_marginHorizontal="@dimen/add_alarm_text_hinside"
+					android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_small"
 					android:layout_marginTop="@dimen/add_alarm_voutside"
 					android:checked="true"
+					android:fontFamily="@font/bmjua"
 					android:text="알람 설정"
 					android:textColor="@color/main_theme"
-					android:textSize="@dimen/add_alarm_text_large" />
+					android:textSize="@dimen/add_alarm_text_mid" />
 
 				<LinearLayout
 					android:layout_width="match_parent"
@@ -103,40 +107,40 @@
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
 						android:orientation="horizontal"
-						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_large">
+						android:layout_marginLeft="@dimen/add_alarm_text_hinside_mid"
+						android:layout_marginRight="@dimen/add_alarm_text_hinside_small">
 
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="match_parent"
 							android:gravity="center|left"
-							android:textSize="@dimen/add_alarm_text_small"
 							android:paddingVertical="@dimen/add_alarm_text_vinside"
-							android:text="알림 횟수"/>
+							android:fontFamily="@font/daylight_210"
+							android:textSize="@dimen/add_alarm_text_small"
+							android:text="알림 횟수" />
 
 						<Spinner
 							android:id="@+id/alarm_times"
 							android:layout_width="0dp"
 							android:layout_height="match_parent"
 							android:layout_weight="1"
-							android:layout_gravity="end"
-							android:textAlignment="textEnd"
 							android:background="@color/box_theme"
-							android:spinnerMode="dropdown"
-							android:textColor="@color/main_theme"/>
+							android:spinnerMode="dropdown" />
 					</LinearLayout>
 
 					<View
 						android:layout_width="match_parent"
 						android:layout_height="@dimen/split_line"
 						android:background="@color/split_line"
-						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside"/>
+						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_small" />
 
 					<androidx.recyclerview.widget.RecyclerView
 						android:id="@+id/add_time_container"
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
 						android:overScrollMode="never"
-						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside"/>
+						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_mid"
+						android:paddingVertical="@dimen/add_alarm_text_vinside_close"/>
 
 					<!--
 					<LinearLayout
@@ -151,11 +155,12 @@
 				<TextView
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
+					android:fontFamily="@font/bmjua"
 					android:text="날짜 설정"
 					android:textColor="@color/main_theme"
 					android:layout_marginTop="@dimen/add_alarm_voutside"
-					android:layout_marginHorizontal="@dimen/add_alarm_text_hinside"
-					android:textSize="@dimen/add_alarm_text_large" />
+					android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_small"
+					android:textSize="@dimen/add_alarm_text_mid" />
 
 				<LinearLayout
 					android:layout_width="match_parent"
@@ -170,22 +175,24 @@
 						android:orientation="horizontal"
 						android:paddingTop="@dimen/add_alarm_text_vinside"
 						android:paddingBottom="@dimen/add_alarm_text_vinside_close"
-						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_large">
+						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_mid">
 
 						<TextView
 							android:layout_width="0dp"
 							android:layout_height="match_parent"
 							android:layout_weight="1"
+							android:fontFamily="@font/daylight_210"
 							android:textSize="@dimen/add_alarm_text_small"
-							android:text="시작 날짜"/>
+							android:text="시작 날짜" />
 
 						<TextView
 							android:id="@+id/add_start_date"
 							android:layout_width="wrap_content"
 							android:layout_height="match_parent"
+							android:fontFamily="@font/daylight_210"
 							android:textSize="@dimen/add_alarm_text_small"
 							android:textColor="@color/main_theme"
-							android:text="0000년 00월 00일"/>
+							android:text="0000년 00월 00일" />
 					</LinearLayout>
 
 					<LinearLayout
@@ -194,12 +201,13 @@
 						android:orientation="horizontal"
 						android:paddingTop="@dimen/add_alarm_text_vinside_close"
 						android:paddingBottom="@dimen/add_alarm_text_vinside"
-						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_large">
+						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_mid">
 
 						<TextView
 							android:layout_width="0dp"
 							android:layout_height="match_parent"
 							android:layout_weight="1"
+							android:fontFamily="@font/daylight_210"
 							android:text="종료 날짜"
 							android:textSize="@dimen/add_alarm_text_small" />
 
@@ -207,61 +215,64 @@
 							android:id="@+id/add_end_date"
 							android:layout_width="wrap_content"
 							android:layout_height="match_parent"
+							android:fontFamily="@font/daylight_210"
 							android:textSize="@dimen/add_alarm_text_small"
 							android:textColor="@color/main_theme"
-							android:text="0000년 00월 00일"/>
+							android:text="0000년 00월 00일" />
 					</LinearLayout>
 
 					<View
 						android:layout_width="match_parent"
 						android:layout_height="@dimen/split_line"
 						android:background="@color/split_line"
-						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside"/>
+						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_small" />
 
 					<TextView
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
-						android:layout_weight="1"
 						android:layout_marginVertical="@dimen/add_alarm_text_vinside"
+						android:fontFamily="@font/daylight_210"
 						android:text="반복 알림"
 						android:textSize="@dimen/add_alarm_text_small"
-						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_large"/>
+						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_mid" />
 
 					<View
 						android:layout_width="match_parent"
 						android:layout_height="@dimen/split_line"
 						android:background="@color/split_line"
-						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside"/>
+						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_small" />
 
 					<RadioGroup
 						android:id="@+id/add_repeat_group"
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
-						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_large" >
+						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_large">
 
 						<RadioButton
 							android:id="@+id/add_repeat_everyday"
 							android:layout_width="match_parent"
 							android:layout_height="wrap_content"
+							android:fontFamily="@font/daylight_210"
 							android:text="매일"
 							android:textColor="@color/text_color"
 							android:checked="true"
-							android:textSize="@dimen/add_alarm_text_small"/>
+							android:textSize="@dimen/add_alarm_text_small" />
 
 						<RadioButton
 							android:id="@+id/add_repeat_select"
 							android:layout_width="match_parent"
 							android:layout_height="wrap_content"
+							android:fontFamily="@font/daylight_210"
 							android:text="요일 지정"
 							android:textColor="@color/text_color"
-							android:textSize="@dimen/add_alarm_text_small"/>
+							android:textSize="@dimen/add_alarm_text_small" />
 					</RadioGroup>
 
 					<LinearLayout
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
 						android:orientation="horizontal"
-						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside">
+						android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_large">
 
 						<TextView
 							android:layout_width="0dp"
@@ -269,7 +280,7 @@
 							tools:ignore="Suspicious0dp"
 							android:textSize="@dimen/add_alarm_text_small"
 							android:paddingVertical="@dimen/add_alarm_text_vinside"
-							android:text="1"/>
+							android:text="1" />
 
 						<ToggleButton
 							android:id="@+id/add_date_sun"
@@ -277,23 +288,27 @@
 							android:layout_height="match_parent"
 							android:layout_weight="1"
 							android:background="@drawable/add_alarm_date_selector"
+							android:fontFamily="@font/daylight_210"
+							android:textSize="@dimen/add_alarm_text_small"
 							android:textColor="@drawable/add_alarm_date_color"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
 							android:checked="true"
+							android:enabled="false"
 							android:textOff="일"
-							android:textOn="일"
-							android:textSize="@dimen/add_alarm_text_small" />
+							android:textOn="일" />
 
 						<ToggleButton
 							android:id="@+id/add_date_mon"
 							android:layout_width="0dp"
 							android:layout_height="match_parent"
 							android:layout_weight="1"
+							android:fontFamily="@font/daylight_210"
 							android:textSize="@dimen/add_alarm_text_small"
 							android:textColor="@drawable/add_alarm_date_color"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
 							android:checked="true"
+							android:enabled="false"
 							android:textOff="월"
 							android:textOn="월" />
 
@@ -302,11 +317,13 @@
 							android:layout_width="0dp"
 							android:layout_height="match_parent"
 							android:layout_weight="1"
+							android:fontFamily="@font/daylight_210"
 							android:textSize="@dimen/add_alarm_text_small"
 							android:textColor="@drawable/add_alarm_date_color"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
 							android:checked="true"
+							android:enabled="false"
 							android:textOff="화"
 							android:textOn="화" />
 
@@ -315,11 +332,13 @@
 							android:layout_width="0dp"
 							android:layout_height="match_parent"
 							android:layout_weight="1"
+							android:fontFamily="@font/daylight_210"
 							android:textSize="@dimen/add_alarm_text_small"
 							android:textColor="@drawable/add_alarm_date_color"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
 							android:checked="true"
+							android:enabled="false"
 							android:textOff="수"
 							android:textOn="수" />
 
@@ -328,11 +347,13 @@
 							android:layout_width="0dp"
 							android:layout_height="match_parent"
 							android:layout_weight="1"
+							android:fontFamily="@font/daylight_210"
 							android:textSize="@dimen/add_alarm_text_small"
 							android:textColor="@drawable/add_alarm_date_color"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
 							android:checked="true"
+							android:enabled="false"
 							android:textOff="목"
 							android:textOn="목" />
 
@@ -341,11 +362,13 @@
 							android:layout_width="0dp"
 							android:layout_height="match_parent"
 							android:layout_weight="1"
+							android:fontFamily="@font/daylight_210"
 							android:textSize="@dimen/add_alarm_text_small"
 							android:textColor="@drawable/add_alarm_date_color"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
 							android:checked="true"
+							android:enabled="false"
 							android:textOff="금"
 							android:textOn="금" />
 
@@ -354,11 +377,13 @@
 							android:layout_width="0dp"
 							android:layout_height="match_parent"
 							android:layout_weight="1"
+							android:fontFamily="@font/daylight_210"
 							android:textSize="@dimen/add_alarm_text_small"
 							android:textColor="@drawable/add_alarm_date_color"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/add_alarm_text_vinside_close"
 							android:checked="true"
+							android:enabled="false"
 							android:textOff="토"
 							android:textOn="토" />
 					</LinearLayout>
@@ -367,22 +392,23 @@
 				<TextView
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
+					android:fontFamily="@font/bmjua"
 					android:text="라벨 설정"
 					android:textColor="@color/main_theme"
 					android:layout_marginTop="@dimen/add_alarm_voutside"
-					android:layout_marginHorizontal="@dimen/add_alarm_text_hinside"
-					android:textSize="@dimen/add_alarm_text_large" />
+					android:layout_marginHorizontal="@dimen/add_alarm_text_hinside_small"
+					android:textSize="@dimen/add_alarm_text_mid" />
 
 				<LinearLayout
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:orientation="vertical"
 					android:background="@drawable/white_background_box"
-					android:paddingHorizontal="@dimen/add_alarm_text_hinside">
+					android:paddingHorizontal="@dimen/add_alarm_text_hinside_small">
 
 					<LinearLayout
 						android:layout_width="match_parent"
-						android:layout_height="wrap_content" >
+						android:layout_height="wrap_content">
 
 
 					</LinearLayout>
@@ -397,15 +423,16 @@
 					android:layout_gravity="center"
 					android:paddingVertical="20dp"
 					android:paddingHorizontal="60dp"
-					android:textSize="@dimen/add_alarm_text_large"
+					android:textSize="@dimen/add_alarm_text_mid"
 					android:textColor="@color/main_theme"
-					android:text="설정 완료"/>
+					android:text="설정 완료"
+					android:fontFamily="@font/bmjua" />
 			</LinearLayout>
 
 			<Space
 				android:layout_width="0dp"
 				android:layout_height="match_parent"
-				android:layout_weight="1"/>
+				android:layout_weight="1" />
 		</LinearLayout>
 	</ScrollView>
 </LinearLayout>
