--- a/Zipssa/app/src/main/res/layout/main_list_fragment.xml
+++ b/Zipssa/app/src/main/res/layout/main_list_fragment.xml
@@ -36,6 +36,7 @@
 				android:id="@+id/main_name"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:fontFamily="@font/bmjua"
 				android:text="약타미"
 				android:textColor="@color/text_color"
 				android:textSize="@dimen/main_text_large" />
@@ -43,6 +44,7 @@
 			<TextView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:fontFamily="@font/bmjua"
 				android:text=" 님의 리스트"
 				android:textColor="@color/text_color"
 				android:textSize="@dimen/main_text_mid" />
@@ -74,6 +76,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginHorizontal="10dp"
+				android:fontFamily="@font/bmjua"
 				android:text="0000 / 00 / 00"
 				android:textColor="@color/text_color"
 				android:textSize="@dimen/main_text_large" />
