--- a/Zipssa/app/src/main/res/layout/main_item.xml
+++ b/Zipssa/app/src/main/res/layout/main_item.xml
@@ -93,8 +93,9 @@
 					<ToggleButton
 						android:id="@+id/main_item_switch"
 						android:layout_width="40dp"
-						android:layout_height="25dp"
+						android:layout_height="20dp"
 						android:background="@drawable/alarm_btn_selector"
+						android:layout_marginVertical="3dp"
 						android:layout_marginRight="30dp"
 						android:fontFamily="@font/daylight_210"
 						android:textOn="알림 on"
