--- a/Zipssa/app/src/main/res/drawable/alarm_btn_selector.xml
+++ b/Zipssa/app/src/main/res/drawable/alarm_btn_selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:state_pressed="false" android:state_checked="false">
 		<shape>
-			<stroke android:color="#707070" android:width="1dp"/>
+			<stroke android:color="@color/text_color" android:width="1dp"/>
 			<solid android:color="#B5B5B5"/>
 			<corners android:radius="15dp" />
 		</shape>
@@ -10,7 +10,7 @@
 
 	<item android:state_pressed="true" android:state_checked="false">
 		<shape>
-			<stroke android:color="#707070" android:width="1dp"/>
+			<stroke android:color="@color/text_color" android:width="1dp"/>
 			<solid android:color="#AAAAAA"/>
 			<corners android:radius="15dp" />
 		</shape>
@@ -18,7 +18,7 @@
 
 	<item android:state_pressed="false" android:state_checked="true">
 		<shape>
-			<stroke android:color="#707070" android:width="1dp"/>
+			<stroke android:color="@color/text_color" android:width="1dp"/>
 			<solid android:color="#AFDBF5"/>
 			<corners android:radius="15dp" />
 		</shape>
@@ -26,7 +26,7 @@
 
 	<item android:state_pressed="true" android:state_checked="true">
 		<shape>
-			<stroke android:color="#707070" android:width="1dp"/>
+			<stroke android:color="@color/text_color" android:width="1dp"/>
 			<solid android:color="#94CDEC"/>
 			<corners android:radius="15dp" />
 		</shape>
