--- a/Zipssa/app/src/main/res/values/styles.xml
+++ b/Zipssa/app/src/main/res/values/styles.xml
@@ -10,4 +10,12 @@
         <item name="windowActionBar">false</item>
     </style>
 
+    <style name="PopupTheme" parent="Theme.AppCompat.Dialog">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+    </style>
 </resources>
