Update main_list date text size

--- a/Zipssa/app/src/main/res/values/dimens.xml
+++ b/Zipssa/app/src/main/res/values/dimens.xml
@@ -38,4 +38,5 @@
 	<dimen name="add_alarm_label_text">11dp</dimen>
 	<dimen name="alarm_switch">8dp</dimen>
 	<dimen name="main_item_time">8dp</dimen>
+	<dimen name="main_item_date">15dp</dimen>
 </resources>
