--- a/Zipssa/app/src/main/res/layout/main_item.xml
+++ b/Zipssa/app/src/main/res/layout/main_item.xml
@@ -139,7 +139,32 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:orientation="horizontal"
-					android:layout_marginTop="@dimen/main_distance_small">
+					android:layout_marginTop="@dimen/main_distance_small" >
+
+					<View
+						android:layout_width="5dp"
+						android:layout_height="5dp"
+						android:background="@drawable/text_circle"
+						android:layout_gravity="center"/>
+
+					<TextView
+						android:id="@+id/main_item_dday"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:gravity="center"
+						android:layout_marginHorizontal="10dp"
+						android:fontFamily="@font/daylight_210"
+						android:text="D-0"
+						android:textSize="@dimen/main_text_mid"
+						android:textColor="@color/text_color"/>
+				</LinearLayout>
+
+				<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:orientation="horizontal"
+					android:layout_marginTop="@dimen/main_distance_small"
+					android:layout_marginBottom="@dimen/main_distance_mid" >
 
 					<View
 						android:layout_width="5dp"
@@ -155,7 +180,7 @@
 						android:layout_marginLeft="10dp"
 						android:fontFamily="@font/daylight_210"
 						android:text="00.00.00"
-						android:textSize="@dimen/main_text_mid"
+						android:textSize="@dimen/main_item_date"
 						android:textColor="@color/text_color"/>
 
 					<TextView
@@ -174,32 +199,7 @@
 						android:gravity="center"
 						android:fontFamily="@font/daylight_210"
 						android:text="00.00.00"
-						android:textSize="@dimen/main_text_mid"
-						android:textColor="@color/text_color"/>
-				</LinearLayout>
-
-				<LinearLayout
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:orientation="horizontal"
-					android:layout_marginTop="@dimen/main_distance_small"
-					android:layout_marginBottom="@dimen/main_distance_mid">
-
-					<View
-						android:layout_width="5dp"
-						android:layout_height="5dp"
-						android:background="@drawable/text_circle"
-						android:layout_gravity="center"/>
-
-					<TextView
-						android:id="@+id/main_item_dday"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:gravity="center"
-						android:layout_marginHorizontal="10dp"
-						android:fontFamily="@font/daylight_210"
-						android:text="D-0"
-						android:textSize="@dimen/main_text_mid"
+						android:textSize="@dimen/main_item_date"
 						android:textColor="@color/text_color"/>
 				</LinearLayout>
 			</LinearLayout>
