--- a/Zipssa/app/src/main/res/layout/main_item.xml
+++ b/Zipssa/app/src/main/res/layout/main_item.xml
@@ -44,14 +44,13 @@
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
 				android:orientation="vertical"
-				android:layout_gravity="center"
+				android:gravity="center"
 				android:paddingBottom="@dimen/main_distance_mid">
 
 				<ImageView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
+					android:layout_width="60dp"
+					android:layout_height="60dp"
 					android:src="@drawable/alarm_img"
-					android:adjustViewBounds="true"
 					android:layout_marginHorizontal="25dp"
 					android:paddingBottom="10dp"/>
 
